force-app/main/default/objects/Zuora__SubscriptionProductCharge__c/fields/Intitule__c.field-meta.xml
<CustomField>
    <fullName>Intitule__c</fullName>
    <label>Intitule</label>
    <length>80</length>
    <type>Text</type>
</CustomField>