force-app/main/default/objects/Zuora__SubscriptionProductCharge__c/fields/Nom__c.field-meta.xml
<CustomField>
    <fullName>Nom__c</fullName>
    <formula>IF( ISBLANK( Intitule__c ) ,  Name , Intitule__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nom</label>
    <type>Text</type>
</CustomField>