force-app/main/default/objects/Zuora__SubscriptionProductCharge__c/fields/PriceCalc__c.field-meta.xml
<CustomField>
    <fullName>PriceCalc__c</fullName>
    <formula>CASE( Zuora__Model__c , &#39;Discount-Fixed Amount&#39;, - Zuora__Price__c , &#39;Discount-Percentage&#39;, - Zuora__Price__c, Zuora__Price__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PriceCalc</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>