force-app/main/default/objects/Zuora__SubscriptionProductCharge__c/fields/Zuora__AccountingCode__c.field-meta.xml
<CustomField>
    <fullName>Zuora__AccountingCode__c</fullName>
    <description>The accounting code for this charge.</description>
    <label>Accounting Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>