force-app/main/default/objects/Zuora__SubscriptionProductCharge__c/fields/Zuora__ApplyDiscountTo__c.field-meta.xml
<CustomField>
    <fullName>Zuora__ApplyDiscountTo__c</fullName>
    <description>Specifies the type of charges a specific discount applies to.</description>
    <label>Apply Discount To</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Null</fullName>
            </value>
            <value>
                <fullName>One Time</fullName>
            </value>
            <value>
                <fullName>One Time Recurring</fullName>
            </value>
            <value>
                <fullName>One Time Recurring Usage</fullName>
            </value>
            <value>
                <fullName>One Time Usage</fullName>
            </value>
            <value>
                <fullName>Recurring</fullName>
            </value>
            <value>
                <fullName>Recurring Usage</fullName>
            </value>
            <value>
                <fullName>Usage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>