force-app/main/default/objects/Zuora__SubscriptionProductCharge__c/fields/Zuora__BillCycleDay__c.field-meta.xml
<CustomField>
    <fullName>Zuora__BillCycleDay__c</fullName>
    <description>Indicates the charge&#39;s billing cycle day (BCD), which is when bill runs generate invoices for charges associated with the product rate plan charge or the account.</description>
    <label>Bill Cycle Day</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>