force-app/main/default/objects/Zuora__SubscriptionProductCharge__c/fields/Zuora__BillCycleType__c.field-meta.xml
<CustomField>
    <fullName>Zuora__BillCycleType__c</fullName>
    <description>Specifies how to determine the billing day for the charge.</description>
    <label>Bill Cycle Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>