force-app/main/default/objects/Zuora__SubscriptionProductCharge__c/fields/Zuora__BillingPeriod__c.field-meta.xml
<CustomField>
    <fullName>Zuora__BillingPeriod__c</fullName>
    <description>e.g. monthly, quarterly, annually</description>
    <label>Period</label>
    <length>255</length>
    <type>Text</type>
</CustomField>