force-app/main/default/objects/Zuora__SubscriptionProductCharge__c/fields/Zuora__BillingPeriodAlignment__c.field-meta.xml
<CustomField>
    <fullName>Zuora__BillingPeriodAlignment__c</fullName>
    <description>Aligns charges within the same subscription if multiple charges begin on different dates.</description>
    <label>Billing Period Alignment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>