force-app/main/default/objects/Zuora__SubscriptionProductCharge__c/fields/Zuora__BillingPeriodStartDay__c.field-meta.xml
<CustomField>
    <fullName>Zuora__BillingPeriodStartDay__c</fullName>
    <description>Day of month that period starts</description>
    <label>Period Start Day</label>
    <length>255</length>
    <type>Text</type>
</CustomField>