force-app/main/default/objects/Zuora__SubscriptionProductCharge__c/fields/Zuora__BillingTiming__c.field-meta.xml
<CustomField>
    <fullName>Zuora__BillingTiming__c</fullName>
    <label>Billing Timing</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>In Advance</fullName>
            </value>
            <value>
                <fullName>In Arrears</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>