force-app/main/default/objects/Zuora__SubscriptionProductCharge__c/fields/Zuora__ChargedThroughDate__c.field-meta.xml
<CustomField>
    <fullName>Zuora__ChargedThroughDate__c</fullName>
    <description>The date through which a customer has been billed for the charge.</description>
    <label>Charged Through Date</label>
    <type>Date</type>
</CustomField>