force-app/main/default/objects/Zuora__SubscriptionProductCharge__c/fields/Zuora__Description__c.field-meta.xml
<CustomField>
    <fullName>Zuora__Description__c</fullName>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>