force-app/main/default/objects/Zuora__SubscriptionProductCharge__c/fields/Zuora__DiscountAmount__c.field-meta.xml
<CustomField>
    <fullName>Zuora__DiscountAmount__c</fullName>
    <description>Specifies the amount of a fixed-amount discount. You can provide a value for this field if the ChargeModel field value is Discount-Fixed Amount.</description>
    <label>Discount Amount</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>