force-app/main/default/objects/Zuora__SubscriptionProductCharge__c/fields/Zuora__DiscountLevel__c.field-meta.xml
<CustomField>
    <fullName>Zuora__DiscountLevel__c</fullName>
    <description>Specifies if the discount applies to just the product rate plan, the entire subscription, or to any activity in the account.</description>
    <label>Discount Level</label>
    <length>255</length>
    <type>Text</type>
</CustomField>