force-app/main/default/objects/Zuora__SubscriptionProductCharge__c/fields/Zuora__DiscountPercentage__c.field-meta.xml
<CustomField>
    <fullName>Zuora__DiscountPercentage__c</fullName>
    <description>The percentage of discount for a percentage discount. Use this field if the value for ProductRatePlanCharge.</description>
    <label>Discount Percentage</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>