force-app/main/default/objects/Zuora__SubscriptionProductCharge__c/fields/Zuora__DMRC__c.field-meta.xml
<CustomField>
    <fullName>Zuora__DMRC__c</fullName>
    <description>A delta monthly recurring charge is the change in monthly recurring revenue caused by an amendment or a new subscription.</description>
    <label>DMRC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>