force-app/main/default/objects/Zuora__SubscriptionProductCharge__c/fields/Zuora__DTCV__c.field-meta.xml
<CustomField>
    <fullName>Zuora__DTCV__c</fullName>
    <description>After an Amendment, the change in the total contract value (TCV) amount for this charge, compared with its previous value.</description>
    <label>DTCV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>