force-app/main/default/objects/Zuora__SubscriptionProductCharge__c/fields/Zuora__EffectiveEndDate__c.field-meta.xml
<CustomField>
    <fullName>Zuora__EffectiveEndDate__c</fullName>
    <description>The date when the (segmented) charge ends (or ended).</description>
    <label>Effective End Date</label>
    <type>Date</type>
</CustomField>