force-app/main/default/objects/Zuora__SubscriptionProductCharge__c/fields/Zuora__EffectiveStartDate__c.field-meta.xml
<CustomField>
    <fullName>Zuora__EffectiveStartDate__c</fullName>
    <label>Effective Start Date</label>
    <type>Date</type>
</CustomField>