force-app/main/default/objects/Zuora__SubscriptionProductCharge__c/fields/Zuora__EndDateCondition__c.field-meta.xml
<CustomField>
    <fullName>Zuora__EndDateCondition__c</fullName>
    <label>End Date Condition</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Subscription End Date</fullName>
            </value>
            <value>
                <fullName>One Time</fullName>
            </value>
            <value>
                <fullName>Fixed Period</fullName>
            </value>
            <value>
                <fullName>Specific End Date</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>