force-app/main/default/objects/Zuora__SubscriptionProductCharge__c/fields/Zuora__ExtendedAmount__c.field-meta.xml
<CustomField>
    <fullName>Zuora__ExtendedAmount__c</fullName>
    <description>Amount billed per period</description>
    <label>Extended Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>