force-app/main/default/objects/Zuora__SubscriptionProductCharge__c/fields/Zuora__IncludedUnits__c.field-meta.xml
<CustomField>
    <fullName>Zuora__IncludedUnits__c</fullName>
    <description>Specifies the number of units in the base set of units.</description>
    <label>Included Units</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>