force-app/main/default/objects/Zuora__SubscriptionProductCharge__c/fields/Zuora__IsLastSegment__c.field-meta.xml
<CustomField>
    <fullName>Zuora__IsLastSegment__c</fullName>
    <description>Indicates if the segment of the rate plan charge is the most recent segment.</description>
    <label>Is Last Segment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>