force-app/main/default/objects/Zuora__SubscriptionProductCharge__c/fields/Zuora__ListPriceBase__c.field-meta.xml
<CustomField>
    <fullName>Zuora__ListPriceBase__c</fullName>
    <label>List Price Base</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Per Month</fullName>
            </value>
            <value>
                <fullName>Per Billing Period</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>