force-app/main/default/objects/Zuora__SubscriptionProductCharge__c/fields/Zuora__Model__c.field-meta.xml
<CustomField>
    <fullName>Zuora__Model__c</fullName>
    <label>Model</label>
    <length>255</length>
    <type>Text</type>
</CustomField>