force-app/main/default/objects/Zuora__SubscriptionProductCharge__c/fields/Zuora__MonthlyRecurringRevenue__c.field-meta.xml
<CustomField>
    <fullName>Zuora__MonthlyRecurringRevenue__c</fullName>
    <label>Monthly Recurring Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>