force-app/main/default/objects/Zuora__SubscriptionProductCharge__c/fields/Zuora__NumberOfPeriods__c.field-meta.xml
<CustomField>
    <fullName>Zuora__NumberOfPeriods__c</fullName>
    <description>Specifies the number of periods to use when calculating charges in an overage smoothing charge model.</description>
    <label>Number Of Periods</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>