force-app/main/default/objects/Zuora__SubscriptionProductCharge__c/fields/Zuora__OriginalProductRatePlanChargeId__c.field-meta.xml
<CustomField>
    <fullName>Zuora__OriginalProductRatePlanChargeId__c</fullName>
    <description>The ID of the orginal product rate plan charge.</description>
    <label>Original Product Rate Plan Charge Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>