force-app/main/default/objects/Zuora__SubscriptionProductCharge__c/fields/Zuora__OverageCalculationOption__c.field-meta.xml
<CustomField>
    <fullName>Zuora__OverageCalculationOption__c</fullName>
    <description>Determines when to calculate overage charges.</description>
    <label>Overage Calculation Option</label>
    <length>255</length>
    <type>Text</type>
</CustomField>