force-app/main/default/objects/Zuora__SubscriptionProductCharge__c/fields/Zuora__OveragePrice__c.field-meta.xml
<CustomField>
    <fullName>Zuora__OveragePrice__c</fullName>
    <description>The price for units over the allowed amount.</description>
    <label>Overage Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>