force-app/main/default/objects/Zuora__SubscriptionProductCharge__c/fields/Zuora__OverageUnusedUnitsCreditOption__c.field-meta.xml
<CustomField>
    <fullName>Zuora__OverageUnusedUnitsCreditOption__c</fullName>
    <description>Determines whether to credit the customer with unused units of usage.</description>
    <label>Overage Unused Units Credit Option</label>
    <length>255</length>
    <type>Text</type>
</CustomField>