force-app/main/default/objects/Zuora__SubscriptionProductCharge__c/fields/Zuora__Price__c.field-meta.xml
<CustomField>
    <fullName>Zuora__Price__c</fullName>
    <label>Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>