force-app/main/default/objects/Zuora__SubscriptionProductCharge__c/fields/Zuora__PriceChangeOption__c.field-meta.xml
<CustomField>
    <fullName>Zuora__PriceChangeOption__c</fullName>
    <description>Applies an automatic price change when a termed subscription is renewed.</description>
    <label>Price Change Option</label>
    <length>255</length>
    <type>Text</type>
</CustomField>