force-app/main/default/objects/Zuora__SubscriptionProductCharge__c/fields/Zuora__PriceIncreasePercentage__c.field-meta.xml
<CustomField>
    <fullName>Zuora__PriceIncreasePercentage__c</fullName>
    <description>Specifies the percentage to increase or decrease the price of renewed subscriptions. Use this field if the ProductRatePlanCharge.PriceChangeOption value is set to SpecificPercentageValue.</description>
    <label>Price Increase Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>