force-app/main/default/objects/Zuora__SubscriptionProductCharge__c/fields/Zuora__PriceTable__c.field-meta.xml
<CustomField>
    <fullName>Zuora__PriceTable__c</fullName>
    <label>Price Table</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>