force-app/main/default/objects/Zuora__SubscriptionProductCharge__c/fields/Zuora__ProcessedThroughDate__c.field-meta.xml
<CustomField>
    <fullName>Zuora__ProcessedThroughDate__c</fullName>
    <description>The date until when charges have been processed. When billing in arrears, such as usage, this field value is the the same as the ChargedThroughDate value. This date is the earliest date when a charge can be amended.</description>
    <label>Processed Through Date</label>
    <type>Date</type>
</CustomField>