force-app/main/default/objects/Zuora__SubscriptionProductCharge__c/fields/Zuora__Product__c.field-meta.xml
<CustomField>
    <fullName>Zuora__Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product (Deprecated)</label>
    <referenceTo>Zuora__Product__c</referenceTo>
    <relationshipLabel>Subscription Product &amp; Charges</relationshipLabel>
    <relationshipName>Subscription_Product_Charges</relationshipName>
    <type>Lookup</type>
</CustomField>