force-app/main/default/objects/Zuora__SubscriptionProductCharge__c/fields/Zuora__ProductDescription__c.field-meta.xml
<CustomField>
    <fullName>Zuora__ProductDescription__c</fullName>
    <label>Product Description</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>