force-app/main/default/objects/Zuora__SubscriptionProductCharge__c/fields/Zuora__ProductEffectiveEndDate__c.field-meta.xml
<CustomField>
    <fullName>Zuora__ProductEffectiveEndDate__c</fullName>
    <label>Product Effective End Date (Deprecated)</label>
    <type>Date</type>
</CustomField>