force-app/main/default/objects/Zuora__SubscriptionProductCharge__c/fields/Zuora__ProductEffectiveEndDate_Product__c.field-meta.xml
<CustomField>
    <fullName>Zuora__ProductEffectiveEndDate_Product__c</fullName>
    <formula>IF( ISBLANK(Zuora__Product__c) ,  Zuora__ProductEffectiveEndDate__c,  Zuora__Product__r.Zuora__EffectiveEndDate__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Effective End Date</label>
    <type>Date</type>
</CustomField>