force-app/main/default/objects/Zuora__SubscriptionProductCharge__c/fields/Zuora__ProductName_Product__c.field-meta.xml
<CustomField>
    <fullName>Zuora__ProductName_Product__c</fullName>
    <formula>IF( ISBLANK(Zuora__Product__c) ,  Zuora__ProductName__c,  HYPERLINK( Zuora__Product__r.Id , Zuora__Product__r.Name) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Name</label>
    <type>Text</type>
</CustomField>