force-app/main/default/objects/Zuora__SubscriptionProductCharge__c/fields/Zuora__ProductRatePlanChargeId__c.field-meta.xml
<CustomField>
    <fullName>Zuora__ProductRatePlanChargeId__c</fullName>
    <description>The ID of the product rate plan charge associated with the subscription rate plan charge,</description>
    <label>Product RatePlan Charge Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>