force-app/main/default/objects/Zuora__SubscriptionProductCharge__c/fields/Zuora__ProductSKU__c.field-meta.xml
<CustomField>
    <fullName>Zuora__ProductSKU__c</fullName>
    <label>Product SKU (Deprecated)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>