force-app/main/default/objects/Zuora__SubscriptionProductCharge__c/fields/Zuora__ProductSKU_Product__c.field-meta.xml
<CustomField>
    <fullName>Zuora__ProductSKU_Product__c</fullName>
    <formula>IF( ISBLANK(Zuora__Product__c) ,  Zuora__ProductSKU__c,  Zuora__Product__r.Zuora__SKU__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product SKU</label>
    <type>Text</type>
</CustomField>