force-app/main/default/objects/Zuora__SubscriptionProductCharge__c/fields/Zuora__Quantity__c.field-meta.xml
<CustomField>
    <fullName>Zuora__Quantity__c</fullName>
    <label>Quantity</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>