force-app/main/default/objects/Zuora__SubscriptionProductCharge__c/fields/Zuora__RatePlanDescription__c.field-meta.xml
<CustomField>
    <fullName>Zuora__RatePlanDescription__c</fullName>
    <label>Rate Plan Description</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>