force-app/main/default/objects/Zuora__SubscriptionProductCharge__c/fields/Zuora__RatePlanEffectiveEndDate__c.field-meta.xml
<CustomField>
    <fullName>Zuora__RatePlanEffectiveEndDate__c</fullName>
    <label>Rate Plan Effective End Date</label>
    <type>Date</type>
</CustomField>