force-app/main/default/objects/Zuora__SubscriptionProductCharge__c/fields/Zuora__RatePlanId__c.field-meta.xml
<CustomField>
    <fullName>Zuora__RatePlanId__c</fullName>
    <description>This field holds rateplan id.</description>
    <externalId>true</externalId>
    <label>RatePlan Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>