force-app/main/default/objects/Zuora__SubscriptionProductCharge__c/fields/Zuora__RatePlanName__c.field-meta.xml
<CustomField>
    <fullName>Zuora__RatePlanName__c</fullName>
    <label>Rate Plan Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>