force-app/main/default/objects/Zuora__SubscriptionProductCharge__c/fields/Zuora__RevRecCode__c.field-meta.xml
<CustomField>
    <fullName>Zuora__RevRecCode__c</fullName>
    <description>Associates this product rate plan charge with a specific revenue recognition code.</description>
    <label>Rev Rec Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>