force-app/main/default/objects/Zuora__SubscriptionProductCharge__c/fields/Zuora__RevRecTriggerCondition__c.field-meta.xml
<CustomField>
    <fullName>Zuora__RevRecTriggerCondition__c</fullName>
    <description>Specifies when revenue recognition begins.</description>
    <label>Rev Rec Trigger Condition</label>
    <length>255</length>
    <type>Text</type>
</CustomField>