force-app/main/default/objects/Zuora__SubscriptionProductCharge__c/fields/Zuora__Segment__c.field-meta.xml
<CustomField>
    <fullName>Zuora__Segment__c</fullName>
    <description>The identifying number of the subscription rate plan segment. Segments are numbered sequentially, starting with 1.</description>
    <label>Segment</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>