force-app/main/default/objects/Zuora__SubscriptionProductCharge__c/fields/Zuora__SpecificBillingPeriod__c.field-meta.xml
<CustomField>
    <fullName>Zuora__SpecificBillingPeriod__c</fullName>
    <description>Customizes the number of month for the charges billing period. This field is required if you set the value of the BillingPeriod field to Specific Months.</description>
    <label>Specific Billing Period</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>