force-app/main/default/objects/Zuora__SubscriptionProductCharge__c/fields/Zuora__SpecificEndDate__c.field-meta.xml
<CustomField>
    <fullName>Zuora__SpecificEndDate__c</fullName>
    <label>Specific End Date</label>
    <type>Date</type>
</CustomField>