force-app/main/default/objects/Zuora__SubscriptionProductCharge__c/fields/Zuora__SubscriptionRatePlan__c.field-meta.xml
<CustomField>
    <fullName>Zuora__SubscriptionRatePlan__c</fullName>
    <deleteConstraint>Cascade</deleteConstraint>
    <label>Subscription Rate Plan</label>
    <referenceTo>Zuora__SubscriptionRatePlan__c</referenceTo>
    <relationshipLabel>Subscription Product &amp; Charges</relationshipLabel>
    <relationshipName>Subscription_Product_Charges</relationshipName>
    <type>Lookup</type>
</CustomField>