force-app/main/default/objects/Zuora__SubscriptionProductCharge__c/fields/Zuora__TotalContractValue__c.field-meta.xml
<CustomField>
    <fullName>Zuora__TotalContractValue__c</fullName>
    <label>Total Contract Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>