force-app/main/default/objects/Zuora__SubscriptionProductCharge__c/fields/Zuora__TriggerDate__c.field-meta.xml
<CustomField>
    <fullName>Zuora__TriggerDate__c</fullName>
    <description>The date when the charge becomes effective, and billing begins. This field is required if the TriggerEvent field value is SpecificDate.</description>
    <label>Trigger Date</label>
    <type>Date</type>
</CustomField>