force-app/main/default/objects/Zuora__SubscriptionProductCharge__c/fields/Zuora__TriggerEvent__c.field-meta.xml
<CustomField>
    <fullName>Zuora__TriggerEvent__c</fullName>
    <description>Specifies when to start billing the customer for the charge.</description>
    <label>Trigger Event</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Upon Contract Effective</fullName>
            </value>
            <value>
                <fullName>Upon Service Activation</fullName>
            </value>
            <value>
                <fullName>Upon Customer Acceptance</fullName>
            </value>
            <value>
                <fullName>Upon a Specific Date</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>