force-app/main/default/objects/Zuora__SubscriptionProductCharge__c/fields/Zuora__Type__c.field-meta.xml
<CustomField>
    <fullName>Zuora__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>One-Time</fullName>
            </value>
            <value>
                <fullName>Recurring</fullName>
            </value>
            <value>
                <fullName>Usage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>