force-app/main/default/objects/Zuora__SubscriptionProductCharge__c/fields/Zuora__UnitOfMeasure__c.field-meta.xml
<CustomField>
    <fullName>Zuora__UnitOfMeasure__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>UOM (Deprecated)</label>
    <referenceTo>Zuora__UnitOfMeasure__c</referenceTo>
    <relationshipLabel>Unit Of Measure</relationshipLabel>
    <relationshipName>Unit_Of_Measure</relationshipName>
    <type>Lookup</type>
</CustomField>