force-app/main/default/objects/Zuora__SubscriptionProductCharge__c/fields/Zuora__UnusedUnitsCreditRates__c.field-meta.xml
<CustomField>
    <fullName>Zuora__UnusedUnitsCreditRates__c</fullName>
    <description>Specifies the rate to credit a customer for unused units of usage. This field is applicable only for overage charge models when the OverageUnusedUnitsCreditOption field value is CreditBySpecificRate.</description>
    <label>Unused Units Credit Rates</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>