force-app/main/default/objects/Zuora__SubscriptionProductCharge__c/fields/Zuora__UOM__c.field-meta.xml
<CustomField>
    <fullName>Zuora__UOM__c</fullName>
    <description>Unit of measure -- basis for pricing (e.g. licenses, seats, users, etc.)</description>
    <label>UOM (Deprecated)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>