force-app/main/default/objects/Zuora__SubscriptionProductCharge__c/fields/Zuora__UOM_formula__c.field-meta.xml
<CustomField>
    <fullName>Zuora__UOM_formula__c</fullName>
    <formula>IF( ISBLANK(Zuora__UnitOfMeasure__c) ,  Zuora__UOM__c,  HYPERLINK( Zuora__UnitOfMeasure__r.Id , Zuora__UnitOfMeasure__r.Name) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>UOM</label>
    <type>Text</type>
</CustomField>