force-app/main/default/objects/Zuora__SubscriptionProductCharge__c/fields/Zuora__Upto_How_Many_Periods__c.field-meta.xml
<CustomField>
    <fullName>Zuora__Upto_How_Many_Periods__c</fullName>
    <description>Determines the period when discount charge model charge is added.</description>
    <label>Up To How Many Periods</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>