force-app/main/default/objects/Zuora__SubscriptionProductCharge__c/fields/Zuora__UpToPeriodsType__c.field-meta.xml
<CustomField>
    <fullName>Zuora__UpToPeriodsType__c</fullName>
    <label>Up To Periods Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Billing Periods</fullName>
            </value>
            <value>
                <fullName>Days</fullName>
            </value>
            <value>
                <fullName>Weeks</fullName>
            </value>
            <value>
                <fullName>Months</fullName>
            </value>
            <value>
                <fullName>Years</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>