force-app/main/default/objects/Zuora__SubscriptionProductCharge__c/fields/Zuora__UsageRecordRatingOption__c.field-meta.xml
<CustomField>
    <fullName>Zuora__UsageRecordRatingOption__c</fullName>
    <description>Determines how Zuora processes usage records for per-unit usage charges.</description>
    <label>UsageRecordRatingOption</label>
    <length>255</length>
    <type>Text</type>
</CustomField>