force-app/main/default/objects/Zuora__SubscriptionProductCharge__c/fields/Zuora__UseDiscountSpecificAccountingCode__c.field-meta.xml
<CustomField>
    <fullName>Zuora__UseDiscountSpecificAccountingCode__c</fullName>
    <description>Determines whether to define a new accounting code for the new discount charge.</description>
    <label>UseDiscountSpecificAccountingCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>