force-app/main/default/objects/Zuora__SubscriptionProductCharge__c/fields/Zuora__WeeklyBillCycleDay__c.field-meta.xml
<CustomField>
    <fullName>Zuora__WeeklyBillCycleDay__c</fullName>
    <description>Specifies which day of the week as the bill cycle day (BCD) for the charge.</description>
    <label>Weekly Bill Cycle Day</label>
    <length>255</length>
    <type>Text</type>
</CustomField>